# ObjectOrientedC

./: .travis_build.sh  CMakeLists.txt  README.md
samek/: CMakeLists.txt  string.c  test.c
samek/Docs/: samek.txt
samek/lib/: CMakeLists.txt  object.c  object.h  shapes.c  shapes.h  string.h
weirich/: CMakeLists.txt  main.c
